--- a/package.json
+++ b/package.json
@@ -74,11 +74,11 @@
     "LICENSE"
   ],
   "peerDependencies": {
-    "@inertiajs/react": "^1.0.0 || ^2.0.0",
+    "@inertiajs/react": "",
     "@inertiajs/vue3": "^1.0.0 || ^2.0.0",
-    "@radix-ui/react-dialog": "^1.1.0",
+    "@radix-ui/react-dialog": "",
     "radix-vue": "^1.9.0",
-    "react": "^18.0.0 || ^19.0.0",
+    "react": "",
     "vue": "^3.0.0"
   },
   "peerDependenciesMeta": {
@@ -102,8 +102,10 @@
     }
   },
   "devDependencies": {
+    "@types/react": "^19.2.6",
     "@vitejs/plugin-react": "^5.1.1",
     "typescript": "^5.9.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
